@@ -134,6 +134,7 @@ _build
 
 /otherlibs/*/.dep
 /otherlibs/dynlink/extract_crc
+/otherlibs/dynlink/META
 /otherlibs/dynlink/dynlink_platform_intf.mli
 /otherlibs/dynlink/byte/dynlink.mli
 /otherlibs/dynlink/native/dynlink.mli
