@@ -1,0 +1,7 @@
+description = "Regular expressions and string processing"
+version = "[distributed with OCaml]"
+directory = "+str"
+archive(byte) = "str.cma"
+archive(native) = "str.cmxa"
+plugin(byte) = "str.cma"
+plugin(native) = "str.cmxs"
