@@ -1,0 +1,19 @@
+version = "[distributed with OCaml]"
+description = "Multi-threading"
+requires(mt,mt_posix) = "threads.posix"
+directory = "+"
+type_of_threads = "posix"
+
+package "posix" (
+  requires = "unix"
+  directory = "+threads"
+  exists_if = "threads.cma"
+  archive(byte,mt,mt_posix) = "threads.cma"
+  archive(native,mt,mt_posix) = "threads.cmxa"
+  version = "[internal]"
+)
+
+package "none" (
+  error = "threading is not supported on this platform"
+  version = "[internal]"
+)
